# cobot_sim

./: CMakeLists.txt  README.md  package.xml
cobot_sim/nodes/: README.md  emergency_stop_monitor_node.py  proximity_sensor_node.py  robot_motion_control_node.py  speed_controller_node.py  state_logger_node.py  visualizer_node.py
cobot_sim/nodes/helpers/: action_server_handler.py  target_planner.py
config/: robot_params.yaml
launch/: cobot_sim.launch.py
msg/: SpeedState.msg
tests/: README.md  test_integration.py  test_unit.py
