<?xml version="1.0"?>
<package format="3">
    <name>cobot_sim</name>
    <version>0.0.0</version>
    <description>Cobot proximity/Estop controller with UR5 simulation</description>
    <maintainer email="denizakyildiz1997@gmail.com">Deniz</maintainer>
    <license>Apache-2.0</license>

    <!-- buildtool deps for CMake and message generation -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <!-- runtime deps -->
    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>control_msgs</depend>

    <!-- ROSIDL runtime (for generated interfaces) -->
    <exec_depend>rosidl_default_runtime</exec_depend>

    <!-- tell ROSIDL this package provides .msg/.srv/.action files -->
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>


    <!-- Test dependencies -->
    <test_depend>ament_cmake_pytest</test_depend>
    <test_depend>launch_testing_ament_cmake</test_depend>
    <test_depend>python3-pytest</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <!-- Optional: for more testing tools -->
    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>python3-pytest</test_depend>

</package>